--- a/agencyzilla-html/assets/scss/style.scss
+++ b/agencyzilla-html/assets/scss/style.scss
@@ -49,6 +49,9 @@ Version: 1.0.0
 // SIDEBAR
 @import 'sidebar';
 
+// SERVICES PAGE
+@import 'services-page';
+
 // OUR SERVICES
 @import 'our-services';
 
